feat: jwt 추가 및 리팩토링

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,5 +31,8 @@ file:
   #path: /Users/hongseungtaeg/Desktop/toyproject/toyProject7-register/file
 
 password:
-  user: 1234
+  attendance: 1234
   admin: rhksflwk
+
+token:
+  secret: test
