--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ server:
 
 file:
   #path: /workspace/file
-  path: /Users/hongseungtaeg/Desktop/toyproject/toyProject7-register/file
+  path: /Users/hongseungtaeg/Desktop/toyproject/toyProject8-onlineAttendanceServer/file
 
 password:
   attendance: 1234
@@ -36,3 +36,8 @@ password:
 
 token:
   secret: test
+
+image:
+  menu: /Users/hongseungtaeg/Desktop/toyproject/toyProject8-onlineAttendanceServer/src/main/resources/static/image
+  #menu: /image/menu/
+  default_filename: default.png
