--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -29,8 +29,8 @@ server:
       tracking-modes: cookie
 
 file:
-  #path: /workspace/file
-  path: /Users/hongseungtaeg/Desktop/toyproject/toyProject8-onlineAttendanceServer/file
+  path: /workspace/file
+  #path: /Users/hongseungtaeg/Desktop/toyproject/toyProject8-onlineAttendanceServer/file
 
 password:
   attendance: 1234
@@ -40,6 +40,6 @@ token:
   secret: test
 
 image:
-  menu: /Users/hongseungtaeg/Desktop/toyproject/toyProject8-onlineAttendanceServer/src/main/resources/static/image
-  #menu: /image/menu/
+  path: /workspace/image
+  #path: /Users/hongseungtaeg/Desktop/toyproject/toyProject8-onlineAttendanceServer/src/main/resources/static/image
   default_filename: default.png
