--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ dependencies {
     implementation 'org.apache.poi:poi-ooxml:4.1.2'
     runtimeOnly 'mysql:mysql-connector-java'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
 
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
 }
