fix: post paging 처리가 정상적으로 작동하지 않던 문제 해결(join과 pageable을 함께 해서 문제 발생)

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -21,8 +21,8 @@ spring:
 
   sql: # data-h2.sql 을 실행하기 위한 설정입니다.
     init:
-      platform: h2
-      mode: always
+      #platform: h2
+      #mode: always
 
   servlet:
     multipart:
