--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -36,7 +36,8 @@ server:
       tracking-modes: cookie
 
 file:
-  path: /workspace/file
+  path: /home/ec2-user/app/server/server/file
+  #path: /workspace/file
   #path: /Users/hongseungtaeg/Desktop/toyproject/toyProject8-onlineAttendanceServer/file
 
 password:
@@ -48,6 +49,7 @@ token:
   access-token-expiration: 7200000 # 2시간
 
 image:
-  path: /workspace/image
+  path: /home/ec2-user/app/server/server/image
+  #path: /workspace/image
   #path: /Users/hongseungtaeg/Desktop/toyproject/toyProject8-onlineAttendanceServer/src/main/resources/static/image
   default_filename: default.png
