--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -15,6 +15,10 @@ on:
   # 수동으로 workflow 실행 가능 -> 자동 실행보다는 수동으로 빌드/배포 실행하는게 더 안전?
   workflow_dispatch:
 
+env: # 새로 추가한 부분
+  S3_BUCKET_NAME: online-attendance-deploy
+  PROJECT_NAME: online-attendance-server
+
 # 한 workflow는 한 개 또는 여러 개의 jobs를 설정할 수 있다.
 jobs:
   build:
@@ -39,3 +43,18 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
         shell: bash
+
+        ### 새로 추가한 부분 ###
+      - name: Make zip file
+        run: zip -r ./$GITHUB_SHA.zip .
+        shell: bash
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Upload to S3
+        run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
