test: attendance api test 추가

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -19,8 +19,7 @@ spring:
         format_sql: true # 실행되는 query를 보여줌
     show-sql: true
 
-  sql: # data-h2.sql 을 실행하기 위한 설정입니다.
-    init:
+  #sql.init: # data-h2.sql 을 실행하기 위한 설정입니다.
       #platform: h2
       #mode: always
 
