--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.apache.poi:poi-ooxml:4.1.2'
     runtimeOnly 'mysql:mysql-connector-java'
